# OCaml-libmpdclient

./: .travis.yml  Makefile  README.md  _oasis  build_doc.sh  dune-project  libmpdclient.opam  mpd.ml  ocaml-libmpdclient.opam  q  test  test.ml  try_mpd_queries  try_mpd_queries.ml
.circleci/: config.yml
.travis/: Dockerfile-alpine  Dockerfile-mpd  Dockerfile-ubuntu  docker-compose-alpine.yaml  docker-compose-ubuntu.yaml  mpd.conf
_build/: .db  .digest-db  .to-delete-in-source-tree  log
doc/: Mpd.Client.html  Mpd.Connection.html  Mpd.LwtClient.html  Mpd.odoc  Mpd__Client_lwt.odoc  Mpd__Connection.odoc  Mpd__Connection_lwt.odoc  Mpd__Music_database_lwt.odoc  Mpd__Playback_lwt.odoc  Mpd__Status.odoc  Mpd_utils.html  Protocol.html  index.html  index_attributes.html  index_class_types.html  index_classes.html  index_extensions.html  index_module_types.html  index_modules.html  index_values.html  type_Mpd.Connection.html  type_Mpd.LwtClient.html  type_Mpd.LwtConnection.html  type_Mpd.Utils.html  type_Mpd.html  type_MpdQueue.html  type_Playback.html  type_Protocol.html  type_Song.html  type_Status.html
docs/: LwtPlayback.html  LwtPlaybackOptions.html  LwtStoredPlaylists.html  Mpd.Client.html  Mpd.Connection.html  Mpd.LwtClient.html  Mpd.LwtConnection.html  Mpd.Utils.html  Mpd.html  MpdLwtQueue.html  MpdQueue.html  Mpd__Client.odoc  Mpd__Client_lwt.odoc  Mpd__Connection.odoc  Mpd__Music_database.odoc  Mpd__Music_database_lwt.odoc  Mpd__Playback.odoc  Mpd__Playback_lwt.odoc  Mpd__Playback_options.odoc  Mpd__Playback_options_lwt.odoc  Mpd__Protocol.odoc  Mpd__Queue.odoc  Mpd__Queue_lwt.odoc  Mpd__Song.odoc  Mpd__Stored_playlists.odoc  Mpd__Stored_playlists_lwt.odoc  Mpd__Utils.odoc  Mpd_utils.html  Playback.html  PlaybackOptions.html  Protocol.html  (+35 more)
samples/: dune  get_mpd_responses.ml  jbuild  mpd_count.ml  mpd_lwt_client_idle.ml  mpd_lwt_client_idle_loop.ml  mpd_lwt_client_idle_noidle.ml  mpd_lwt_count.ml  mpd_lwt_ping.ml  mpd_lwt_playlist_info.ml  mpd_lwt_send_cmd.ml  mpd_lwt_send_ping.ml  mpd_lwt_status.ml  mpd_playlist_info.ml  mpd_status_query.ml  mpd_tagtypes_query.ml  mpd_volume_query.ml  responses  try_mpd_queries.ml
(+407 files in other folders)
