opam-version: "1.2"
name: "libmpdclient"
version: "~unknown"
maintainer: "cedlemo <cedlemo@gmx.com>"
authors: "cedlemo <cedlemo@gmx.com>"
homepage: "https://github.com/cedlemo/OCaml-libmpdclient"
bug-reports: "https://github.com/cedlemo/OCaml-libmpdclient/issues"
license: "GPL3"
dev-repo: "https://github.com/cedlemo/OCaml-libmpdclient"
build: [["dune" "build" "-p" name "-j" jobs]]
build-test: [["dune" "runtest" "-p" name "-j" jobs]]
depends: [
  "dune" {build}
  "lwt"
  "ounit"
  "cmdliner"
  "notty"
  "logs"
  "fmt"
]
